--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <canvas id="myCanvas"></canvas>
-    <script src="app.js"></script>
+    <script src="drawer.js"></script>
+    <script src="player.js"></script>
+    <script src="main.js"></script>
 </head>
 
 <body>
