--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <canvas id="myCanvas"></canvas>
     <script src="drawer.js"></script>
     <script src="player.js"></script>
+    <script src="wall.js"></script>
     <script src="main.js"></script>
 </head>
 
