--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="drawer.js"></script>
     <script src="player.js"></script>
     <script src="wall.js"></script>
+    <script src="keys.js"></script>
     <script src="main.js"></script>
 </head>
 
